name: Problem10
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, haskell98 -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: Problem 10
             (*) Run-length encoding of a list. Use the result of problem P09 to implement the so-called run-length encoding data compression method. Consecutive duplicates of elements are encoded as lists (N E) where N is the number of duplicates of the element E.
             .
             Example:
             .
             * (encode '(a a a a b c c a a d e e e e))
             ((4 A) (1 B) (2 C) (2 A) (1 D)(4 E))
             Example in Haskell:
             .
             encode "aaaabccaadeeee"
             [(4,'a'),(1,'b'),(2,'c'),(2,'a'),(1,'d'),(4,'e')]
             .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: Problem10
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: