name: Problem11
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: haskell98 -any, base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: Problem 11
             (*) Modified run-length encoding.
             .
             Modify the result of problem 10 in such a way that if an element has no duplicates it is simply copied into the result list. Only elements with duplicates are transferred as (N E) lists.
             .
             Example:
             .
             * (encode-modified '(a a a a b c c a a d e e e e))
             ((4 A) B (2 C) (2 A) D (4 E))
             Example in Haskell:
             .
             P11> encodeModified "aaaabccaadeeee"
             [Multiple 4 'a',Single 'b',Multiple 2 'c',
             Multiple 2 'a',Single 'd',Multiple 4 'e']
             .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: Problem11
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: