name: Problem19
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: Problem 19
             (**) Rotate a list N places to the left.
             .
             Hint: Use the predefined functions length and (++).
             .
             Examples:
             .
             * (rotate '(a b c d e f g h) 3)
             (D E F G H A B C)
             .
             * (rotate '(a b c d e f g h) -2)
             (G H A B C D E F)
             Examples in Haskell:
             .
             *Main> rotate ['a','b','c','d','e','f','g','h'] 3
             "defghabc"
              
             *Main> rotate ['a','b','c','d','e','f','g','h'] (-2)
             "ghabcdef"
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: Problem19
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: