name: Problem20
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description:  Problem 20
             (*) Remove the K'th element from a list.
             .
             Example in Prolog:
             .
             ?- remove_at(X,[a,b,c,d],2,R).
             X = b
             R = [a,c,d]
             Example in Lisp:
             .
             * (remove-at '(a b c d) 2)
             (A C D)
             (Note that this only returns the residue list, while the Prolog version also returns the deleted element.)
             .
             Example in Haskell:
             .
             *Main> removeAt 1 "abcd"
             ('b',"acd")
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: Problem20
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: