name: Problem21
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: Problem 21
             Insert an element at a given position into a list.
             .
             Example:
             .
             * (insert-at 'alfa '(a b c d) 2)
             (A ALFA B C D)
             Example in Haskell:
             .
             P21> insertAt 'X' "abcd" 2
             "aXbcd"
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: Problem21
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: