name: Problem7
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: Problem 7
             (**) Flatten a nested list structure.
             .
             Transform a list, possibly holding lists as elements into a `flat' list by replacing each list with its elements (recursively).
             .
             Example:
             .
             * (my-flatten '(a (b (c d) e)))
             (A B C D E)
             Example in Haskell:
             .
             *Main> flatten (Elem 5)
             [5]
             *Main> flatten (List [Elem 1, List [Elem 2, List [Elem 3, Elem 4], Elem 5]])
             [1,2,3,4,5]
             *Main> flatten (List [])
             []
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: Problem7
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: